# sigparse

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
sigparse/: __init__.py  _applicator.py  _classparse.py  _errors.py  _pep604.py  _sigparse.py  utils.py
tests/: test_sigparse.py  test_utils.py
