[tool.poetry]
name = "sigparse"
version = "1.0.0"
description = "Backports python3.10 typing features into python 3.7 and newer."
authors = ["Lunarmagpie <bambolambo0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Lunarmagpie/sigparse"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"

[tool.poetry.dependencies]
python = ">=3.7"
forbiddenfruit = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
nox = "^2022.8.7"
mypy = "^0.971"
pytest = "^7.1.3"

[tool.black]
line-length = 88
target-version = ['py38']
skip-magic-trailing-comma = true

[tool.mypy]
python_version = 3.8
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
namespace_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
